// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component renders a select with 3 options 1`] = `
.sx8kxz1 {
  -webkit-appearance: none;
  appearance: none;
  background-color: white;
  background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224px%22%20height%3D%2224px%22%20viewBox%3D%220%200%2024%2024%22%20stroke%3D%22%230f66b3%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20fill%3D%22none%22%20color%3D%22%230f66b3%22%3E%3Cpolyline%20points%3D%226%2010%2012%2016%2018%2010%22%2F%3E%3C%2Fsvg%3E);
  background-position: right var(--space-3) top 50%, 0 0;
  background-repeat: no-repeat, repeat;
  background-size: var(--sizes-2) auto, 100%;
  border: 1px solid var(--colors-tonal500);
  border-radius: var(--radii-0);
  color: var(--colors-tonal900);
  display: block;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 400;
  height: var(--sizes-4);
  line-height: 1.4;
  padding-left: var(--space-3);
  padding-right: var(--space-3);
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
  transition: all 75ms ease-out;
  width: 100%;
}

.sx8kxz1:hover {
  cursor: pointer;
}

.sx8kxz1:focus {
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  border-color: var(--colors-primary900);
  outline: none;
}

.sx8kxz1::-ms-expand {
  display: none;
}

.sx8kxz1[disabled] {
  background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224px%22%20height%3D%2224px%22%20viewBox%3D%220%200%2024%2024%22%20stroke%3D%22%23666666%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20fill%3D%22none%22%20color%3D%22%23666666%22%3E%3Cpolyline%20points%3D%226%2010%2012%2016%2018%2010%22%2F%3E%3C%2Fsvg%3E);
}

.sx8kxz1[disabled],
.sx8kxz1 > option[disabled] {
  opacity: 0.7;
  background-color: var(--colors-tonal300);
  cursor: not-allowed;
}

<div>
  <select
    aria-label="dropdown"
    class="sx8kxz1"
  >
    <option
      value="value1"
    >
      Option 1
    </option>
    <option
      value="value2"
    >
      Option 2
    </option>
    <option
      value="value3"
    >
      Option 3
    </option>
  </select>
</div>
`;

exports[`Select component renders an disabled select 1`] = `
.sx8kxz1 {
  -webkit-appearance: none;
  appearance: none;
  background-color: white;
  background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224px%22%20height%3D%2224px%22%20viewBox%3D%220%200%2024%2024%22%20stroke%3D%22%230f66b3%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20fill%3D%22none%22%20color%3D%22%230f66b3%22%3E%3Cpolyline%20points%3D%226%2010%2012%2016%2018%2010%22%2F%3E%3C%2Fsvg%3E);
  background-position: right var(--space-3) top 50%, 0 0;
  background-repeat: no-repeat, repeat;
  background-size: var(--sizes-2) auto, 100%;
  border: 1px solid var(--colors-tonal500);
  border-radius: var(--radii-0);
  color: var(--colors-tonal900);
  display: block;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 400;
  height: var(--sizes-4);
  line-height: 1.4;
  padding-left: var(--space-3);
  padding-right: var(--space-3);
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
  transition: all 75ms ease-out;
  width: 100%;
}

.sx8kxz1:hover {
  cursor: pointer;
}

.sx8kxz1:focus {
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  border-color: var(--colors-primary900);
  outline: none;
}

.sx8kxz1::-ms-expand {
  display: none;
}

.sx8kxz1[disabled] {
  background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224px%22%20height%3D%2224px%22%20viewBox%3D%220%200%2024%2024%22%20stroke%3D%22%23666666%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20fill%3D%22none%22%20color%3D%22%23666666%22%3E%3Cpolyline%20points%3D%226%2010%2012%2016%2018%2010%22%2F%3E%3C%2Fsvg%3E);
}

.sx8kxz1[disabled],
.sx8kxz1 > option[disabled] {
  opacity: 0.7;
  background-color: var(--colors-tonal300);
  cursor: not-allowed;
}

<div>
  <select
    aria-label="dropdown"
    class="sx8kxz1"
    disabled=""
  />
</div>
`;

exports[`Select component renders select with a default option 1`] = `
.sx8kxz1 {
  -webkit-appearance: none;
  appearance: none;
  background-color: white;
  background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224px%22%20height%3D%2224px%22%20viewBox%3D%220%200%2024%2024%22%20stroke%3D%22%230f66b3%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20fill%3D%22none%22%20color%3D%22%230f66b3%22%3E%3Cpolyline%20points%3D%226%2010%2012%2016%2018%2010%22%2F%3E%3C%2Fsvg%3E);
  background-position: right var(--space-3) top 50%, 0 0;
  background-repeat: no-repeat, repeat;
  background-size: var(--sizes-2) auto, 100%;
  border: 1px solid var(--colors-tonal500);
  border-radius: var(--radii-0);
  color: var(--colors-tonal900);
  display: block;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 400;
  height: var(--sizes-4);
  line-height: 1.4;
  padding-left: var(--space-3);
  padding-right: var(--space-3);
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
  transition: all 75ms ease-out;
  width: 100%;
}

.sx8kxz1:hover {
  cursor: pointer;
}

.sx8kxz1:focus {
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  border-color: var(--colors-primary900);
  outline: none;
}

.sx8kxz1::-ms-expand {
  display: none;
}

.sx8kxz1[disabled] {
  background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224px%22%20height%3D%2224px%22%20viewBox%3D%220%200%2024%2024%22%20stroke%3D%22%23666666%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20fill%3D%22none%22%20color%3D%22%23666666%22%3E%3Cpolyline%20points%3D%226%2010%2012%2016%2018%2010%22%2F%3E%3C%2Fsvg%3E);
}

.sx8kxz1[disabled],
.sx8kxz1 > option[disabled] {
  opacity: 0.7;
  background-color: var(--colors-tonal300);
  cursor: not-allowed;
}

<div>
  <select
    aria-label="dropdown"
    class="sx8kxz1"
  >
    <option
      disabled=""
      hidden=""
    >
      Please select:
    </option>
    <option
      value="value1"
    >
      Option 1
    </option>
    <option
      value="value2"
    >
      Option 2
    </option>
    <option
      value="value3"
    >
      Option 3
    </option>
  </select>
</div>
`;

exports[`Select component renders select with a disabled option 1`] = `
.sx8kxz1 {
  -webkit-appearance: none;
  appearance: none;
  background-color: white;
  background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224px%22%20height%3D%2224px%22%20viewBox%3D%220%200%2024%2024%22%20stroke%3D%22%230f66b3%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20fill%3D%22none%22%20color%3D%22%230f66b3%22%3E%3Cpolyline%20points%3D%226%2010%2012%2016%2018%2010%22%2F%3E%3C%2Fsvg%3E);
  background-position: right var(--space-3) top 50%, 0 0;
  background-repeat: no-repeat, repeat;
  background-size: var(--sizes-2) auto, 100%;
  border: 1px solid var(--colors-tonal500);
  border-radius: var(--radii-0);
  color: var(--colors-tonal900);
  display: block;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 400;
  height: var(--sizes-4);
  line-height: 1.4;
  padding-left: var(--space-3);
  padding-right: var(--space-3);
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
  transition: all 75ms ease-out;
  width: 100%;
}

.sx8kxz1:hover {
  cursor: pointer;
}

.sx8kxz1:focus {
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  border-color: var(--colors-primary900);
  outline: none;
}

.sx8kxz1::-ms-expand {
  display: none;
}

.sx8kxz1[disabled] {
  background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224px%22%20height%3D%2224px%22%20viewBox%3D%220%200%2024%2024%22%20stroke%3D%22%23666666%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20fill%3D%22none%22%20color%3D%22%23666666%22%3E%3Cpolyline%20points%3D%226%2010%2012%2016%2018%2010%22%2F%3E%3C%2Fsvg%3E);
}

.sx8kxz1[disabled],
.sx8kxz1 > option[disabled] {
  opacity: 0.7;
  background-color: var(--colors-tonal300);
  cursor: not-allowed;
}

<div>
  <select
    aria-label="dropdown"
    class="sx8kxz1"
  >
    <option
      value="value1"
    >
      Option 1
    </option>
    <option
      value="value2"
    >
      Option 2
    </option>
    <option
      value="value3"
    >
      Option 3
    </option>
    <option
      disabled=""
      value="value4"
    >
      Option 4
    </option>
  </select>
</div>
`;

exports[`Select component renders select with no options 1`] = `
.sx8kxz1 {
  -webkit-appearance: none;
  appearance: none;
  background-color: white;
  background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224px%22%20height%3D%2224px%22%20viewBox%3D%220%200%2024%2024%22%20stroke%3D%22%230f66b3%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20fill%3D%22none%22%20color%3D%22%230f66b3%22%3E%3Cpolyline%20points%3D%226%2010%2012%2016%2018%2010%22%2F%3E%3C%2Fsvg%3E);
  background-position: right var(--space-3) top 50%, 0 0;
  background-repeat: no-repeat, repeat;
  background-size: var(--sizes-2) auto, 100%;
  border: 1px solid var(--colors-tonal500);
  border-radius: var(--radii-0);
  color: var(--colors-tonal900);
  display: block;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 400;
  height: var(--sizes-4);
  line-height: 1.4;
  padding-left: var(--space-3);
  padding-right: var(--space-3);
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
  transition: all 75ms ease-out;
  width: 100%;
}

.sx8kxz1:hover {
  cursor: pointer;
}

.sx8kxz1:focus {
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  border-color: var(--colors-primary900);
  outline: none;
}

.sx8kxz1::-ms-expand {
  display: none;
}

.sx8kxz1[disabled] {
  background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224px%22%20height%3D%2224px%22%20viewBox%3D%220%200%2024%2024%22%20stroke%3D%22%23666666%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%20fill%3D%22none%22%20color%3D%22%23666666%22%3E%3Cpolyline%20points%3D%226%2010%2012%2016%2018%2010%22%2F%3E%3C%2Fsvg%3E);
}

.sx8kxz1[disabled],
.sx8kxz1 > option[disabled] {
  opacity: 0.7;
  background-color: var(--colors-tonal300);
  cursor: not-allowed;
}

<div>
  <select
    aria-label="dropdown"
    class="sx8kxz1"
  />
</div>
`;
